<?xml version="1.0"?>
<package>
  <name>create2_driver</name>
  <version>0.0.0</version>
  <description>iRobot Create2 driver</description>

  <maintainer email="roomba@todo.todo">roomba</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>create2_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>create2_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
